--- a/color-pallet-generator/index.html
+++ b/color-pallet-generator/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="styles.css" />
-		<title>Document</title>
+		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
-	<body></body>
+	<body>
+		<div class="contents">
+			<input id="myInput" type="text" placeholder="Enter your text here" />
+			<button id="myButton">Submit</button>
+		</div>
+		<div id="pallet-container"></div>
+		<script src="document.js"></script>
+	</body>
 </html>
